Fixed "empty content" error alignment.

--- a/src/app/articles/article-details/article-details.component.css
+++ b/src/app/articles/article-details/article-details.component.css
@@ -46,13 +46,12 @@
 #contentDivEdit {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 40%;
     overflow-wrap: break-word;
-    align-items: center;
 }
 
 #editor {
-    width: 80%;
+    width: 100%;
 }
 
 ::ng-deep #contentDivNonEdit p:empty {
